Updated to java 21, introduced records in place of model classes